django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: django
            port:
              number: 80
